docs: add api documentation
